txt_DATA = ad.logo curly.logo square.logo triangle.logo \
arrow.logo flower.logo squaresss.logo trianglesss.logo  \
canvascolors.logo randomname.logo timestables.logo kde.logo
txtdir = $(kde_datadir)/kturtle/examples/en_US

xml_DATA = logohighlightstyle.en_US.xml
xmldir = $(kde_datadir)/katepart/syntax

keywords_DATA = logokeywords.en_US.xml
keywordsdir = $(kde_datadir)/kturtle/data

EXTRA_DIST = $(txt_DATA) $(xml_DATA) $(keywords_DATA)
