picsdir = $(kde_datadir)/kturtle/pics
pics_DATA = turtle.0000.png  turtle.0006.png  turtle.0012.png  turtle.0018.png  turtle.0024.png  turtle.0030.png \
turtle.0001.png  turtle.0007.png  turtle.0013.png  turtle.0019.png  turtle.0025.png  turtle.0031.png \
turtle.0002.png  turtle.0008.png  turtle.0014.png  turtle.0020.png  turtle.0026.png  turtle.0032.png \
turtle.0003.png  turtle.0009.png  turtle.0015.png  turtle.0021.png  turtle.0027.png  turtle.0033.png \
turtle.0004.png  turtle.0010.png  turtle.0016.png  turtle.0022.png  turtle.0028.png  turtle.0034.png \
turtle.0005.png  turtle.0011.png  turtle.0017.png  turtle.0023.png  turtle.0029.png  turtle.0035.png
EXTRA_DIST = $(pics_DATA)
